# C-language-learning

./: CMakeLists.txt  README.md
00/: 01.c  02.c  03.c  04.c  05.c  06.c  07.c  homework.c  year.c
08/: App.c  CalcHour.c  CalcMin.c  CalcSec.h
09/: App.c  CalcHour.h  CalcMin.h  CalcSec.c  CalcTime.c  CalcTime.h  Tick.c  Tick.h
10/: App.c  RunClock.c  RunClock.h
11/: App.c  DataType.h  Queue.c  Queue.h
12/: App.c  DataType.h  PackUnpack.c  PackUnpack.h
13/: App.c  DataType.h  PackUnpack.c  PackUnpack.h  ProcHostCmd.c  ProcHostCmd.h  SendDataToHost.c  SendDataToHost.h
14/: App.c  PackUnpack.c  ProcMCUData.c  ProcMCUData.h  SendCmdToMCU.c  SendCmdToMCU.h
Test/: Test.c
讲义/: C语言程序设计与应用 - 讲义 - 第10章-基于多媒体定时器的电子钟设计.pptx  C语言程序设计与应用 - 讲义 - 第11章-电子钟的API设计与应用.pptx  C语言程序设计与应用 - 讲义 - 第12章-循环队列的API设计与应用.pptx  C语言程序设计与应用 - 讲义 - 第13章-协议处理的API设计与应用.pptx  C语言程序设计与应用 - 讲义 - 第14章-模拟从机命令接收与数据发送.pptx  C语言程序设计与应用 - 讲义 - 第15章-模拟主机发送与数据接收.pptx  C语言程序设计与应用 - 讲义 - 第1章-C语言开发环境.pptx  C语言程序设计与应用 - 讲义 - 第2章-简单的秒值-时间值转换.pptx  C语言程序设计与应用 - 讲义 - 第3章-基于数组的秒值-时间值转换.pptx  C语言程序设计与应用 - 讲义 - 第4章-基于函数的秒值-时间值转换.pptx  C语言程序设计与应用 - 讲义 - 第5章-基于枚举的秒值-时间值转换.pptx  C语言程序设计与应用 - 讲义 - 第6章-基于指针的秒值-时间值转换.pptx  C语言程序设计与应用 - 讲义 - 第7章-基于结构体的秒值-时间值转换.pptx  C语言程序设计与应用 - 讲义 - 第8章-基于结构体指针的秒值-时间值转换.pptx  C语言程序设计与应用 - 讲义 - 第9章-基于多文件的秒值-时间值转换.pptx
